[package]
name = "color-parser-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
tui = { version = "0.16.0", default-features = false }

[dev-dependencies]
serde_json = "1.0.68"
