[package]
name = "color-to-tui"
version = "0.3.0"
authors = ["Uttarayan Mondal <uttarayan21@gmail.com>"]
edition = "2021"
description = "Parse colors and convert them to ratatui::style::Colors"
homepage = "https://git.uttarayan.me/uttarayan/color-to-tui"
repository = "https://git.uttarayan.me/uttarayan/color-to-tui"
license = "MIT"
exclude = [".drone.yml", ".github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tui = { package="ratatui", version = "0.*", default-features = false }

[dev-dependencies]
serde_json = "1.0.68"

[features]
default = ["optional"]
optional = []
